--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <p class="text-center color-secondary">Lorem Ipsum is simply dummy text of the printing and typesetting
                     industry. Lorem
                     Ipsum
-                    has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    has been the industry's standard dummy text ever since the 1500s, when an unknownn
                     printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
             <div class="wrapper display-grid display-grid-two">
